<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1BEE7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="330dp"
        android:layout_height="142dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/welcome_to_your_tamagotchi_app_my_name_is_darla"
        android:textColor="#8E24AA"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageDisplay"
        android:layout_width="290dp"
        android:layout_height="301dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toTopOf="@+id/btnMainActivity2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cat_welcome"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btnMainActivity2"
        android:layout_width="172dp"
        android:layout_height="77dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="56dp"
        android:text="@string/get_started"
        android:textColor="#F3E5F5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:iconTint="#5E35B1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>